# RAG-based-AI-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/v1/endpoints/: health.py  rag.py
backend/app/core/: settings.py
backend/app/db/: vector_store.py
backend/app/schemas/: rag.py
backend/app/services/: ingestion.py  retrieval.py
backend/app/utils/: file_loader.py
docs/: architecture.md
frontend/: streamlit_app.py
scripts/: run_frontend.sh
tests/: test_settings.py
